--- a/OrderProcessor.Business/OrderProcessor.Business.csproj
+++ b/OrderProcessor.Business/OrderProcessor.Business.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\OrderProcessor.DTO\OrderProcessor.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\RuleHandlers\" />
+  </ItemGroup>
+
 </Project>
